Replace currentThread().threadId() by currentThread().getId().